--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,10 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
+
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script async defer src="http://maps.google.com/maps/api/js?key=AIzaSyCA3wZtwQg6CCIdy6ET0uZhQC_2olpNrlE&sensor=true"></script>
+
   </head>
   <body ng-app="starter">
     <!--
